--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <body>
   <ul class="menu">
     <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
+
   </ul>
 
   <!--[if lt IE 7]>
@@ -39,5 +39,6 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+   <script src="services/imgurService.js"></script>
 </body>
 </html>
