--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,9 @@
-<p>This is the partial for view 1.</p>
+<div ng-controller="View1Ctrl">
+
+    <form novalidate class="simple-form">
+    Original Imgur link: <input type="text" ng-model="originalLink" style="width: 50%;  "/><br />
+    <input type="submit" ng-click="update(originalLink)" value="Fetch" />
+  </form>
+    <pre>Fetched image link: {{ recalculatedLink}}</pre>
+    <img ng-src="{{recalculatedLink}}">
+</div>
